<resources>
    <string name="app_name">Pets</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="editor_activity_title_new_pet">Add an Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="category_gender">Gender</string>
    <string name="category_measurement">Details</string>
    <string name="hint_prod_name">Name</string>
    <string name="hint_prod_price">Price</string>
    <string name="hint_prod_quantity">Quantity</string>
    <string name="unit_prod_price">Units</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
</resources>
